У клиента есть город. Новые типы для Event. БД на postgress. Логгеры работают исправно.

--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 	<description>The project created throughout the course 'Spring Framework - The Basics'</description>
 
 	<properties>
-		<spring.version>3.2.13.RELEASE</spring.version>
+		<spring.version>5.3.16</spring.version>
 		<junit.version>4.12</junit.version>
-        <mockito.version>2.2.12</mockito.version>
+		<mockito.version>2.2.12</mockito.version>
 		<commons.io.version>2.4</commons.io.version>
 
-		<aspectj.version>1.8.9</aspectj.version>
+		<aspectj.version>1.9.22.1</aspectj.version>
 
         <derby.version>10.13.1.1</derby.version>
 
@@ -62,11 +62,11 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-        <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
-            <version>${derby.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.5.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.aspectj</groupId>
