--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/spring_proj
-jdbc.username=postgres
+jdbc.driverClassName=org.h2.Driver
+jdbc.url=jdbc:h2:file:./target/db;DB_CLOSE_ON_EXIT=FALSE
+jdbc.username=sa
 jdbc.password=
